--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,7 +40,7 @@ img {
     & > *:not(footer) {
         padding: 2rem 1rem;
         @media (min-width: $break-1) {
-            padding: 6rem 0
+            padding: 6rem 2rem;
         }
     }
 }
@@ -77,7 +77,7 @@ img {
                 font-size: 3rem;
             }
             @media (min-width: $break-3) {
-                font-size: 3.6rem;
+                font-size: 3rem;
             }
         }
     }
@@ -115,12 +115,11 @@ h1, h2, h3, h4 {
 #site-header {
     @include flexbox;
     @include align-items(center);
-    // height: 100%;
+    height: 100%;
     min-height: 220px;
     background: #0d3047 url(img/ui-ux.svg) no-repeat 50% 50%;
     background-size: contain;
     color: #fff;
-    font-weight: 300;
     text-align: center;
     @media (min-width: $break-1 ) {
         min-height: 340px;
@@ -130,9 +129,6 @@ h1, h2, h3, h4 {
     }
     @media (min-width: $break-3) {
         min-height: 680px;
-        background-position: 50% 0;
-        background-size: 1000px;
-        background-attachment: fixed;
     }
     .content {
         position: relative;
@@ -140,15 +136,14 @@ h1, h2, h3, h4 {
 
         @media (min-width: $break-2) {
             & > * {
-                opacity: 0;
+
             }
         }
     }
     h1, p {
         margin: 0;
-        text-transform: uppercase;
     }
-    h1 {
+    p {
         font-size: 1.4rem;
         font-weight: 300;
         @media (min-width: $break-1) {
@@ -161,11 +156,12 @@ h1, h2, h3, h4 {
             // font-size: 3rem
         }
     }
-    p {
+    h1 {
         margin: 1.6rem 0 1.6rem;
         font-size: 4.8rem;
+        font-weight: 300;
         line-height: 1;
-        letter-spacing: 4px;
+        text-transform: uppercase;
         @media (min-width: $break-1) {
             font-size: 7.2rem;
         }
@@ -173,7 +169,7 @@ h1, h2, h3, h4 {
             margin: 3rem 0;
         }
         @media (min-width: $break-3) {
-            font-size: 9.6rem;
+            font-size: 7.2rem;
         }
     }
 }
@@ -192,7 +188,7 @@ blockquote {
         font-size: 1.4rem;
     }
     @media (min-width: $break-2) {
-        font-size: 1.6rem;
+        font-size: 2.1rem;
     }
     @media (min-width: $break-3) {
         p span {
@@ -208,7 +204,7 @@ blockquote {
         font-size: 1.2rem;
         color: #4d4d4d;
         @media (min-width: $break-1) {
-            font-size: 1.6rem;
+            font-size: 1.8rem;
         }
     }
 }
@@ -226,52 +222,89 @@ blockquote {
         margin: 0;
         text-align: center;
     }
-    li {
+    .work-list > li {
         position: relative;
-        float: left;
-        width: 50%;
-        padding: 10px;
+        margin-bottom: 50px;
+        overflow: hidden;
+        box-shadow: 1px 0 1px rgba(0,0,0,0.18);
         @media (min-width: $break-1) {
-            width: 25%;
-            margin: 0 0 40px;
+            float: left;
+            width: 48%;
+            max-width: 560px;
+            margin-bottom: 100px;
+            &:nth-child(even) {
+                float: right;
+                margin-left: 2%;
+            }
         }
-        @media (min-width: $break-3) {
-            width: 25%;
-            margin: 0 0 60px;
+        &.active .panel {
+            top: 0;
+            opacity: 1;
         }
     }
     figure {
-        position: relative;
-        max-width: 300px;
-        max-height: 300px;
-        padding: 4px;
-        // border-radius: 50%;
-        img {
-            border-radius: 50%;
-            // box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+        overflow: hidden;
+        border: 6px solid #fff;
+        @media (min-width: $break-3) {
+            height: 390px;
+        }
+        a {
+            display: block;
+            width: 100%;
+            height: 100%;
         }
     }
-
-
-    .icon-behance {
-        clear: both;
-        display: block;
+    .panel {
+        @include flexbox;
+        @include flex-direction(column);
+        @include justify-content(center);
+        @include align-items(center);
+        opacity: 0;
+        position: absolute;
+        top: 100%;
+        left: 0;
         width: 100%;
-        margin: 0 0 6rem;
-        text-decoration: none;
-        text-align: center;
-        color: #555;
-        text-transform: uppercase;
-        color: #666;
-        font-size: 1.4rem;
-        @media (min-width: $break-1) {
-            margin: 0;
+        height: 100%;
+        overflow: hidden;
+        background: rgba(13, 48, 71, 0.98);
+        // background-color: #e89d3c;
+        transition: all .5s ease-in-out;
+        color: #fff;
+
+        .brand {
+            font-size: 30px;
+            &:after {
+                content: "";
+                display: block;
+                height: 0;
+                width: 100px;
+                border-top: 1px solid rgba(255,255,255,0.4);
+                margin: 16px auto;
+            }
         }
-        &::before {
-            display: block;
-            margin: 0 0 1rem;
-            font-size: 3rem;
-            color: #555;
+        .info {
+            margin: 0 0 16px;
+        }
+        h4 {
+            font-size: 16px;
+            text-transform: uppercase;
+        }
+        p {
+            margin: 0 0 16px;
+        }
+        .btn {
+            color: rgba(255,255,255,0.9);
+            background: rgba(255,255,255,0.2);
+            text-decoration: none;
+            border: 1px solid rgba(255,255,255,0.4);
+            padding: 6px 16px;
+            border-radius: 5px;
+            transition: all 0.25s ease-in-out;
+            font-weight: 500;
+            &:hover {
+                color: #fff;
+                border-color: #fff;
+            }
         }
     }
 }
@@ -282,14 +315,14 @@ blockquote {
 
 .spinner {
     position: absolute;
-    top: 0;
-    left: 1px;
+    top: 12px;
+    right: 12px;
     display: block;
-    width: 100%;
-    height: 100%;
-    border: solid 3px transparent;
-    border-top-color: #888;
-    border-left-color: #888;
+    width: 24px;
+    height: 24px;
+    border: solid 1px transparent;
+    border-top-color: #fff;
+    border-left-color: #fff;
     border-radius: 50%;
     -webkit-animation: cs-spinner 600ms linear infinite;
     animation: cs-spinner 600ms linear infinite;
