update grunt build task, update image paths

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'cam';
-    src:url('/src/fonts/cam.eot');
-    src:url('/src/fonts/cam.eot?#iefix') format('embedded-opentype'),
-        url('/src/fonts/cam.woff') format('woff'),
-        url('/src/fonts/cam.ttf') format('truetype'),
-        url('/src/fonts/cam.svg#cam') format('svg');
+    src:url('/fonts/cam.eot');
+    src:url('/fonts/cam.eot?#iefix') format('embedded-opentype'),
+        url('/fonts/cam.woff') format('woff'),
+        url('/fonts/cam.ttf') format('truetype'),
+        url('/fonts/cam.svg#cam') format('svg');
     font-weight: normal;
     font-style: normal;
 }
